NEW191408
[iOS] REGRESSION (r236935): Holding down arrow key does not cause repeated DOM keydown events on device
https://bugs.webkit.org/show_bug.cgi?id=191408
Summary [iOS] REGRESSION (r236935): Holding down arrow key does not cause repeated DO...
Daniel Bates
Reported 2018-11-07 16:57:14 PST
This regressed in <https://trac.webkit.org/changeset/236935> (bug #190345) on device. This does not effect the simulator (why?). Holding down an arrow key, say down arrow, outside an editable element does not cause repeated DOM keydown events to be dispatched. You can observe this by using the web page <https://unixpapa.com/js/testkey.html> and pressing and holding the down arrow. I see a single keydown event and a single keyup event. But you should see multiple keydown events and a single keyup events.
Attachments
Radar WebKit Bug Importer
Comment 1 2018-11-07 16:57:35 PST
Note You need to log in before you can comment on or make changes to this bug.