REGRESSION (r236935): Holding down arrow key does not cause repeated DOM keydown events on device https://bugs.webkit.org/show_bug.cgi?id=191408 <rdar://problem/45895135>

Rubber-stamped by Simon Fraser.

* SourcesCocoa.txt:
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _scrollByContentOffset:]):
* UIProcess/API/Cocoa/WKWebViewInternal.h:
* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView setupInteraction]):
(-[WKContentView cleanupInteraction]):
(-[WKContentView scrollViewWillStartPanOrPinchGesture]):
(-[WKContentView canPerformActionForWebView:withSender:]):
(-[WKContentView keyCommands]):
(-[WKContentView _arrowKeyForWebView:]):
(-[WKContentView _didHandleKeyEvent:eventWasHandled:]):
(-[WKContentView _scrollOffsetForEvent:]):
(-[WKContentView _interpretKeyEvent:isCharEvent:]):
(-[WKContentView isScrollableForKeyboardScrollViewAnimator:]): Deleted.
(-[WKContentView keyboardScrollViewAnimator:distanceForIncrement:]): Deleted.
(-[WKContentView keyboardScrollViewAnimatorWillScroll:]): Deleted.
(-[WKContentView keyboardScrollViewAnimatorDidFinishScrolling:]): Deleted.
* UIProcess/ios/WKKeyboardScrollingAnimator.h: Removed.
* UIProcess/ios/WKKeyboardScrollingAnimator.mm: Removed.
* UIProcess/ios/WKPDFView.mm:
(-[WKPDFView dealloc]):
(-[WKPDFView web_handleKeyEvent:]):
(-[WKPDFView web_initWithFrame:webView:mimeType:]):
* WebKit.xcodeproj/project.pbxproj:
Revert WKKeyboardScrollingAnimator.


Canonical link: https://commits.webkit.org/207701.62@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@240166 268f45cc-cd09-0410-ab3c-d52691b4dbfc