Source/WebKit/UIProcess/ios/WKPDFView.mm
@@ -33,7 +33,6 @@
 #import "PDFKitSPI.h"
 #import "UIKitSPI.h"
 #import "WKActionSheetAssistant.h"
-#import "WKKeyboardScrollingAnimator.h"
 #import "WKUIDelegatePrivate.h"
 #import "WKWebEvent.h"
 #import "WKWebViewInternal.h"
@@ -68,7 +67,6 @@
     WebKit::InteractionInformationAtPosition _positionInformation;
     RetainPtr<NSString> _suggestedFilename;
     WeakObjCPtr<WKWebView> _webView;
-    RetainPtr<WKKeyboardScrollViewAnimator> _keyboardScrollingAnimator;
 }
 
 - (void)dealloc
@@ -76,7 +74,6 @@
     [_actionSheetAssistant cleanupSheet];
     [[_hostViewController view] removeFromSuperview];
     [_pageNumberIndicator removeFromSuperview];
-    [_keyboardScrollingAnimator invalidate];
     std::memset(_passwordForPrinting.mutableData(), 0, _passwordForPrinting.length());
     [super dealloc];
 }
@@ -84,10 +81,6 @@
 - (BOOL)web_handleKeyEvent:(::UIEvent *)event
 {
     auto webEvent = adoptNS([[WKWebEvent alloc] initWithEvent:event]);
-
-    if ([_keyboardScrollingAnimator beginWithEvent:webEvent.get()])
-        return YES;
-    [_keyboardScrollingAnimator handleKeyEvent:webEvent.get()];
     return NO;
 }
 
@@ -114,8 +107,6 @@
 
     self.backgroundColor = UIColor.grayColor;
     webView.scrollView.backgroundColor = UIColor.grayColor;
-
-    _keyboardScrollingAnimator = adoptNS([[WKKeyboardScrollViewAnimator alloc] initWithScrollView:webView.scrollView]);
 
     _webView = webView;
     return self;
